# platform-demo

./: README.md
Debug/: platform
cube-movement-project/: CMakeLists.txt
cube-movement-project/include/: shader.h
cube-movement-project/src/: Shader.cpp
expenses/: package-lock.json
expenses/src/: App.jsx  index.jsx
platforma/: package-lock.json  package.json
platforma/src/app/: page.js
plex/: index.html  main.js
try1/: index.html  main.js
